fix(workbench/message-box): align message on the left, not in the center
The alignment of title and message can be controlled via separate CSS variables:
--sci-workbench-messagebox-title-align: aligns the title (default is `center`, inherited from `--sci-workbench-dialog-title-align` CSS variable)
--sci-workbench-messagebox-text-align: aligns the text (default is `start`)

--- a/projects/scion/workbench/design/_workbench-dark-theme-design-tokens.scss
+++ b/projects/scion/workbench/design/_workbench-dark-theme-design-tokens.scss
@@ -38,10 +38,11 @@ $tokens: (
   --sci-workbench-messagebox-max-width: 400px,
   --sci-workbench-messagebox-severity-indicator-size: 6px,
   --sci-workbench-messagebox-padding: var(--sci-workbench-dialog-padding),
+  --sci-workbench-messagebox-title-align: var(--sci-workbench-dialog-title-align),
   --sci-workbench-messagebox-title-font-family: var(--sci-workbench-dialog-title-font-family),
   --sci-workbench-messagebox-title-font-weight: bold,
   --sci-workbench-messagebox-title-font-size: 1em,
-  --sci-workbench-messagebox-text-align: var(--sci-workbench-dialog-title-align),
+  --sci-workbench-messagebox-text-align: start,
   --sci-workbench-dialog-padding: .75em,
   --sci-workbench-dialog-header-height: 2.75rem,
   --sci-workbench-dialog-header-background-color: var(--sci-color-background-elevation),
